--- a/.github/workflows/build-ios.yml
+++ b/.github/workflows/build-ios.yml
@@ -45,7 +45,7 @@ jobs:
       # 7. Detect workspace
       - name: Detect workspace
         run: |
-          WORKSPACE=$(find ios/App -maxdepth 1 -name "*.xcworkspace" -type d | head -n 1)
+          WORKSPACE=$(find ios/App -maxdepth 1 -name "*.xcworkspace" | head -n 1)
           if [ -z "$WORKSPACE" ]; then
             echo "Error: .xcworkspace not found"
             exit 1
@@ -72,14 +72,43 @@ jobs:
           IOS_P12_BASE64: ${{ secrets.IOS_P12_BASE64 }}
           IOS_MOBILEPROVISION_BASE64: ${{ secrets.IOS_MOBILEPROVISION_BASE64 }}
 
-      # 10. Decode App Store Connect API key
+      # 10. Import .p12 into keychain
+      - name: Import iOS Certificate
+        run: |
+          security create-keychain -p "" build.keychain
+          security import ios_cert.p12 -k ~/Library/Keychains/build.keychain -P "$IOS_P12_PASSWORD" -T /usr/bin/codesign
+          security list-keychains -s ~/Library/Keychains/build.keychain
+          security default-keychain -s ~/Library/Keychains/build.keychain
+        env:
+          IOS_P12_PASSWORD: ${{ secrets.IOS_P12_PASSWORD }}
+
+      # 11. Decode App Store Connect API key
       - name: Setup API Key
         run: |
           echo "${APP_STORE_CONNECT_API_KEY_BASE64}" | base64 --decode > AuthKey.p8
         env:
           APP_STORE_CONNECT_API_KEY_BASE64: ${{ secrets.APP_STORE_CONNECT_API_KEY_BASE64 }}
 
-      # 11. Build & sign iOS with Fastlane
+      # 12. Create export_options.plist
+      - name: Create export options plist
+        run: |
+          cat > export_options.plist <<EOL
+            <?xml version="1.0" encoding="UTF-8"?>
+            <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
+            <plist version="1.0">
+            <dict>
+                <key>method</key>
+                <string>app-store</string>
+                <key>provisioningProfiles</key>
+                <dict>
+                    <key>com.managerxpro</key>
+                    <string>ios_profile.mobileprovision</string>
+                </dict>
+            </dict>
+            </plist>
+            EOL
+
+      # 13. Build & sign iOS with Fastlane
       - name: Build & Sign iOS
         run: |
           mkdir -p build/ios
@@ -89,11 +118,12 @@ jobs:
             export_method:"app-store" \
             output_directory:"build/ios" \
             xcargs:"DEVELOPMENT_TEAM=NPXC63W394" \
-            export_options:"provisioningProfiles={\"com.managerxpro\":\"ios_profile.mobileprovision\"}"
+            export_options:"export_options.plist" \
+            app_store_connect_api_key_path:"AuthKey.p8"
         env:
           IOS_P12_PASSWORD: ${{ secrets.IOS_P12_PASSWORD }}
 
-      # 12. Upload IPA artifact
+      # 14. Upload IPA artifact
       - name: Upload IPA
         uses: actions/upload-artifact@v4
         with:
