--- a/.github/workflows/build-ios.yml
+++ b/.github/workflows/build-ios.yml
@@ -20,9 +20,11 @@ jobs:
 
       # 3. Install npm dependencies
       - name: Install dependencies
-        run: npm install --legacy-peer-deps
+        # Use a safe install command
+        run: npm ci
 
       # 4. Patch PrimeNG (if needed)
+      # Note: This is a direct port of your original 'sed' command for macOS runners.
       - name: Patch PrimeNG
         run: |
           sed -i '' 's/, InjectFlags//' node_modules/primeng/dynamicdialog/dynamicdialog-injector.d.ts || true
@@ -37,28 +39,36 @@ jobs:
       # 6. Install CocoaPods
       - name: Install CocoaPods
         run: |
+          # Install CocoaPods globally on the runner
           sudo gem install cocoapods
+          # Change directory to the iOS project folder
           cd ios/App
+          # Update the pod repository list
           pod repo update
+          # Install the necessary dependencies (Capacitor plugins, etc.)
           pod install --verbose
 
       # 7. Detect workspace
+      # We combine detection and setting the environment variable
       - name: Detect workspace
         run: |
-          WORKSPACE=$(find ios/App -maxdepth 1 -name "*.xcworkspace" -type d | head -n 1)
-          if [ -z "$WORKSPACE" ]; then
+          WORKSPACE_PATH=$(find ios/App -maxdepth 1 -name "*.xcworkspace" -type d | head -n 1)
+          if [ -z "$WORKSPACE_PATH" ]; then
             echo "Error: .xcworkspace not found"
             exit 1
           fi
-          echo "Workspace detected: $WORKSPACE"
-          echo "WORKSPACE=$WORKSPACE" >> $GITHUB_ENV
+          echo "Workspace detected: $WORKSPACE_PATH"
+          echo "WORKSPACE_PATH=$WORKSPACE_PATH" >> $GITHUB_ENV
+          # Extract the base name (e.g., App.xcworkspace)
+          echo "WORKSPACE_NAME=$(basename $WORKSPACE_PATH)" >> $GITHUB_ENV
 
-      # 8. Verify scheme
+      # 8. Verify scheme (optional but good practice)
       - name: Verify workspace scheme
         run: |
           cd ios/App
           SCHEME="App"
-          if ! xcodebuild -list -workspace "$(basename $WORKSPACE)" | grep -q "$SCHEME"; then
+          # Check if the scheme exists in the workspace
+          if ! xcodebuild -list -workspace "${{ env.WORKSPACE_NAME }}" | grep -q "$SCHEME"; then
             echo "Error: Scheme '$SCHEME' not found"
             exit 1
           fi
@@ -70,37 +80,47 @@ jobs:
         with:
           ruby-version: 3.2
           bundler-cache: true
-
+      
       - name: Install Fastlane
         run: gem install fastlane -v 2.228.0
 
-      # 10. Setup App Store Connect API key
+      # 10. Setup App Store Connect API key (.p8 file)
       - name: Setup API Key
         run: |
+          # Decode the Base64 secret and save it as AuthKey.p8
           echo "${APP_STORE_CONNECT_API_KEY_BASE64}" | base64 --decode > AuthKey.p8
         env:
           APP_STORE_CONNECT_API_KEY_BASE64: ${{ secrets.APP_STORE_CONNECT_API_KEY_BASE64 }}
 
-      # 11. Fetch certificates & provisioning profiles using match
+      # 11. Setup SSH for match repo access
+      - name: Setup SSH for match
+        uses: webfactory/ssh-agent@v0.9.0
+        with:
+          ssh-private-key: ${{ secrets.MATCH_REPO_SSH_PRIVATE_KEY }}
+
+      # 12. Fetch certificates & provisioning profiles using match
       - name: Fetch signing credentials
         run: |
           fastlane match appstore \
             --type appstore \
             --app_identifier com.managerxpro \
             --api_key_path AuthKey.p8 \
-            --readonly
+            --readonly \
+            --git_url ${{ secrets.FASTLANE_MATCH_GIT_URL }}
+        env:
+          FASTLANE_MATCH_GIT_URL: ${{ secrets.FASTLANE_MATCH_GIT_URL }}
 
-      # 12. Build & sign iOS
+      # 13. Build & sign iOS IPA
       - name: Build & Sign iOS
         run: |
           mkdir -p build/ios
           fastlane run build_ios_app \
-            workspace:"ios/App/App.xcworkspace" \
+            workspace:"${{ env.WORKSPACE_PATH }}" \
             scheme:"App" \
             export_method:"app-store" \
             output_directory:"build/ios"
 
-      # 13. Upload IPA artifact
+      # 14. Upload IPA artifact
       - name: Upload IPA
         uses: actions/upload-artifact@v4
         with:
