--- a/.github/workflows/build-ios.yml
+++ b/.github/workflows/build-ios.yml
@@ -102,13 +102,13 @@ jobs:
           # Hardcoded Match Password
           MATCH_PASSWORD: Rashmal@1993 
           
-      # 13. Update Xcode Project Team ID <--- FIX: COMMAND IS NOW ON ONE LINE
+      # 13. Update Xcode Project Team ID 
       - name: Set Development Team ID
         run: fastlane run update_project_team path:"ios/App/App.xcodeproj" targets:App teamid:"NPXC63W394"
 
-      # 14. Set Manual Code Signing Settings <--- FIX: COMMAND IS NOW ON ONE LINE
+      # 14. Set Manual Code Signing Settings <--- FINAL CORRECTION: Renamed parameter
       - name: Set Manual Code Signing
-        run: fastlane run update_code_signing_settings targets:App path:"ios/App/App.xcodeproj" code_signing_identity:Apple Distribution code_signing_style:Manual team_id:NPXC63W394 profile_name:"match AppStore com.managerxpro"
+        run: fastlane run update_code_signing_settings targets:App path:"ios/App/App.xcodeproj" code_sign_identity:Apple Distribution code_signing_style:Manual team_id:NPXC63W394 profile_name:"match AppStore com.managerxpro"
 
       # 15. Build & sign iOS IPA
       - name: Build & Sign iOS
